[gd_scene load_steps=4 format=3 uid="uid://b4i6d6fg2bo73"]

[ext_resource type="Script" uid="uid://co62e1k7yqdmy" path="res://Components/component_piece_area.gd" id="1_ojnox"]

[sub_resource type="BoxShape3D" id="BoxShape3D_6503w"]

[sub_resource type="BoxShape3D" id="BoxShape3D_sih1u"]
size = Vector3(1, 2, 1)

[node name="Component_pieceArea" type="Node3D"]
script = ExtResource("1_ojnox")

[node name="Area_Main" type="Area3D" parent="."]
unique_name_in_owner = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area_Main"]
shape = SubResource("BoxShape3D_6503w")

[node name="Area_Cushion" type="Area3D" parent="."]
unique_name_in_owner = true

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area_Cushion"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
shape = SubResource("BoxShape3D_sih1u")
